feat: initial commit solution scenario 3

--- a/scenario3/src/main/resources/application.yml
+++ b/scenario3/src/main/resources/application.yml
@@ -9,4 +9,5 @@ consumers:
 spring:
   kafka:
     producer:
+      transaction-id-prefix: user-application
       value-serializer: io.confluent.kafka.streams.serdes.avro.SpecificAvroSerializer
