--- a/scenario4/pom.xml
+++ b/scenario4/pom.xml
@@ -11,7 +11,7 @@
   <groupId>eu.cymo</groupId>
   <artifactId>scenario-4</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>webshop</name>
+  <name>webshop-scenario4</name>
 
   <properties>
     <java.version>17</java.version>
